Update the Seattle_Air_BnB Python file

--- a/Air_BnB_Data_Findings.ipynb
+++ b/Air_BnB_Data_Findings.ipynb
@@ -1,10 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 207,
-   "id": "cd25ffe4",
+   "cell_type": "markdown",
+   "id": "132c5824",
    "metadata": {},
+   "source": [
+    "## The projects seeks to provide insight into the dataset using the CRISP-DM processes. \n",
+    "#### For more information on visit my github page on #patlichengine\n",
+    "1. How does user from each location respond to the different review categories and which rooms were visited the most?\n",
+    "2. In what way did the reviews affect the revenue of the company?\n",
+    "3. What policy affected the choice of review on the site and in which was do they visitors respond to the reviews."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cd25ffe4",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -101,7 +115,7 @@
        "4  Kelly was a great host and very accommodating ...  "
       ]
      },
-     "execution_count": 207,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "id": "fdeff43e",
    "metadata": {
     "scrolled": true
@@ -373,7 +387,7 @@
        "[5 rows x 92 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 4,
    "id": "bc0f587f",
    "metadata": {},
    "outputs": [
@@ -467,7 +481,7 @@
        "14      241032  2016-01-18         t  $85.00"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "id": "1024ed7b",
    "metadata": {},
    "outputs": [
@@ -784,7 +798,7 @@
        "[5 rows x 98 columns]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 6,
    "id": "ac9f523f",
    "metadata": {},
    "outputs": [
@@ -836,7 +850,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 30,
    "id": "dacf9dff",
    "metadata": {},
    "outputs": [
@@ -874,16 +888,17 @@
     }
    ],
    "source": [
-    "#For each score boundary, determin the average score\n",
-    "review_responses = df_merge.groupby(['review_scores_location', 'smart_location']).mean()['number_of_reviews'].sort_values().dropna()\n",
-    "#review_responses = df_merge.groupby(['review_scores_location', 'smart_location'])['number_of_reviews'].mean()\n",
-    "print(review_responses)\n",
-    "#df_merge.groupby(['smart_location']).mean()['review_scores_rating'].sort_values().dropna()"
+    "'''For each score boundary, determine the average score\n",
+    "Since there was not missing valus in the review scores location, smart location, \n",
+    "there was no need to to handle missing values\n",
+    "'''\n",
+    "review_responses = df_merge.groupby(['review_scores_location', 'smart_location']).mean()['number_of_reviews'].sort_values()\n",
+    "print(review_responses)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 18,
    "id": "5d91680e",
    "metadata": {
     "scrolled": false
@@ -909,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 19,
    "id": "4262d1cb",
    "metadata": {},
    "outputs": [
@@ -954,7 +969,9 @@
     "#Room visits - get the rooms collection above 200 reviews as the most visited\n",
     "room_visits = df_merge.name.value_counts()\n",
     "top_room_visits = room_visits[room_visits > 200]\n",
-    "print(top_room_visits)\n"
+    "\n",
+    "#print the output of the data\n",
+    "print(top_room_visits)"
    ]
   },
   {
@@ -968,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 21,
    "id": "55c80b8a",
    "metadata": {},
    "outputs": [],
@@ -985,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 22,
    "id": "a82360a8",
    "metadata": {},
    "outputs": [
@@ -1007,43 +1024,33 @@
       "2009-07        90.0\n",
       "Freq: M, Name: price, Length: 79, dtype: float64\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Index(['price'], dtype='object')"
-      ]
-     },
-     "execution_count": 206,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Create a subset of the rooms with their prices\n",
     "df_price = df_merge[[\"date\", \"price\", \"reviews_per_month\", \"review_scores_rating\"]]\n",
-    "c = df_price.columns[3:4]  \n",
-    "df_price = df_price.dropna(subset=c, how='all')\n",
+    "\n",
+    "#Create a subject of the numeric fields \n",
+    "df_checker = df_price.columns[3:4] \n",
+    "df_price = df_price.dropna(subset=df_checker, how='all')\n",
     "\n",
     "#Create year and month fields\n",
     "#df_price['year'] = pd.DatetimeIndex(df_price['date']).year\n",
     "#df_price['month'] = pd.DatetimeIndex(df_price['date']).month\n",
     "\n",
-    "#drop the date column\n",
-    "#df_price.drop('date', axis=1, inplace=True)\n",
-    "\n",
+    "#clean the price field\n",
     "df_price['price'] = df_price['price'].apply(clean_currency).astype('float')\n",
-    "#df_price['price'] = df_price['price'].fillna(0.0).str.replace('[$,]', '').astype('float')\n",
     "\n",
     "\n",
-    "\n",
-    "#print(df_price)\n",
+    "#Remove duplicates where necessary\n",
     "df_price.drop_duplicates(inplace=True)\n",
     "top_room_price = df_price[df_price['reviews_per_month'] > 10].sort_values(by='price', ascending=False,)\n",
     "\n",
     "#Get the mode\n",
     "df_price_summary = df_price.groupby(pd.PeriodIndex(df_price['date'], freq=\"M\"))['price'].sum().sort_values(ascending=False)\n",
     "print(df_price_summary)\n",
+    "\n",
+    "#Convert the Series to a dataframe\n",
     "price_frame = df_price_summary.to_frame()"
    ]
   },
@@ -1091,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 23,
    "id": "9c9bf2dc",
    "metadata": {
     "scrolled": true
@@ -1133,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 24,
    "id": "021a0b64",
    "metadata": {},
    "outputs": [
@@ -1163,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "f3412458",
    "metadata": {},
    "outputs": [
@@ -1171,26 +1178,30 @@
      "data": {
       "text/plain": [
        "reviewer_name\n",
-       "Annie       78.084416\n",
-       "Cathy       53.944984\n",
-       "Edwin      132.849315\n",
-       "Gillian    211.268519\n",
-       "Ivy        102.778816\n",
-       "Lilia       89.000000\n",
-       "Luc         98.659091\n",
-       "Sascha     115.098039\n",
-       "Suzanne    195.000000\n",
-       "Name: price_y, dtype: float64"
+       "'Brielle           95.000000\n",
+       "(Leo) Dennis      175.000000\n",
+       "(email hidden)    133.636364\n",
+       "5012scf           150.000000\n",
+       "A                  77.500000\n",
+       "                     ...    \n",
+       "해진                 50.000000\n",
+       "현덕(Hyunduk)       130.000000\n",
+       "형선                 66.000000\n",
+       "혜리                105.000000\n",
+       "호철                 78.000000\n",
+       "Name: price, Length: 14380, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#What is the average revenue derived from the reviews accross all the users\n",
-    "total_rev = df.groupby('reviewer_name')['price_y'].mean()\n",
+    "#clean the price field\n",
+    "df_merge['price'] = df_merge['price'].apply(clean_currency).astype('float')\n",
+    "total_rev = df_merge.groupby('reviewer_name')['price'].mean()\n",
     "total_rev"
    ]
   },
