--- a/Air_BnB_Data_Findings.ipynb
+++ b/Air_BnB_Data_Findings.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## The projects seeks to provide insight into the dataset using the CRISP-DM processes. \n",
-    "#### For more information on visit my github page on #patlichengine\n",
+    "#### For more information on visit the project's ReamMe file\n",
     "1. How does user from each location respond to the different review categories and which rooms were visited the most?\n",
     "2. In what way did the reviews affect the revenue of the company?\n",
     "3. What policy affected the choice of review on the site and in which was do they visitors respond to the reviews."
