--- a/Air_BnB_Data_Findings.ipynb
+++ b/Air_BnB_Data_Findings.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "132c5824",
+   "id": "10f8ae72",
    "metadata": {},
    "source": [
     "## The projects seeks to provide insight into the dataset using the CRISP-DM processes. \n",
-    "#### For more information on visit the project's ReamMe file\n",
+    "#### For more information on visit the project ReadMe file and the Blog Post on Medium\n",
     "1. How does user from each location respond to the different review categories and which rooms were visited the most?\n",
     "2. In what way did the reviews affect the revenue of the company?\n",
     "3. What policy affected the choice of review on the site and in which was do they visitors respond to the reviews."
