--- a/Air_BnB_Data_Findings.ipynb
+++ b/Air_BnB_Data_Findings.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cd25ffe4",
    "metadata": {
     "scrolled": true
@@ -115,7 +115,7 @@
        "4  Kelly was a great host and very accommodating ...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fdeff43e",
    "metadata": {
     "scrolled": true
@@ -387,7 +387,7 @@
        "[5 rows x 92 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bc0f587f",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
        "14      241032  2016-01-18         t  $85.00"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1024ed7b",
    "metadata": {},
    "outputs": [
@@ -798,7 +798,7 @@
        "[5 rows x 98 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ac9f523f",
    "metadata": {},
    "outputs": [
@@ -850,7 +850,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "dacf9dff",
    "metadata": {},
    "outputs": [
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "5d91680e",
    "metadata": {
     "scrolled": false
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "4262d1cb",
    "metadata": {},
    "outputs": [
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "55c80b8a",
    "metadata": {},
    "outputs": [],
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "a82360a8",
    "metadata": {},
    "outputs": [
@@ -1011,11 +1011,11 @@
      "output_type": "stream",
      "text": [
       "date\n",
-      "2015-08    901447.0\n",
-      "2015-09    761239.0\n",
-      "2015-07    739397.0\n",
+      "2015-08    901701.0\n",
+      "2015-09    761948.0\n",
+      "2015-07    739697.0\n",
       "2015-06    617985.0\n",
-      "2015-10    589681.0\n",
+      "2015-10    589811.0\n",
       "             ...   \n",
       "2010-02       205.0\n",
       "2009-09       184.0\n",
@@ -1030,19 +1030,18 @@
     "#Create a subset of the rooms with their prices\n",
     "df_price = df_merge[[\"date\", \"price\", \"reviews_per_month\", \"review_scores_rating\"]]\n",
     "\n",
-    "#Create a subject of the numeric fields \n",
-    "df_checker = df_price.columns[3:4] \n",
+    "#Create a subject of the numeric fields using array slicing \n",
+    "df_checker = df_price.columns[2:3]\n",
+    "\n",
+    "#Drop missing data from the subset\n",
     "df_price = df_price.dropna(subset=df_checker, how='all')\n",
     "\n",
-    "#Create year and month fields\n",
-    "#df_price['year'] = pd.DatetimeIndex(df_price['date']).year\n",
-    "#df_price['month'] = pd.DatetimeIndex(df_price['date']).month\n",
     "\n",
     "#clean the price field\n",
     "df_price['price'] = df_price['price'].apply(clean_currency).astype('float')\n",
     "\n",
     "\n",
-    "#Remove duplicates where necessary\n",
+    "#Remove duplicates where necessary and get the dataset where reviews per month is above 10\n",
     "df_price.drop_duplicates(inplace=True)\n",
     "top_room_price = df_price[df_price['reviews_per_month'] > 10].sort_values(by='price', ascending=False,)\n",
     "\n",
@@ -1085,6 +1084,14 @@
    ],
    "source": [
     "price_frame.plot(y = 'price')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc5cb64f",
+   "metadata": {},
+   "source": [
+    "### From the above plot between 2015 and 2016, there is reduction in the company's revenue. The company can out why there is decline through surveys and create targeted Ads that would draw more more customers to its services"
    ]
   },
   {
