--- a/Air_BnB_Data_Findings.ipynb
+++ b/Air_BnB_Data_Findings.ipynb
@@ -1030,10 +1030,10 @@
     "#Create a subset of the rooms with their prices\n",
     "df_price = df_merge[[\"date\", \"price\", \"reviews_per_month\", \"review_scores_rating\"]]\n",
     "\n",
-    "#Create a subject of the numeric fields using array slicing \n",
+    "#Create a subject of the numeric fields using array slicing to drop missing values based on the subset \n",
     "df_checker = df_price.columns[2:3]\n",
     "\n",
-    "#Drop missing data from the subset\n",
+    "#Drop missing data based on the subset\n",
     "df_price = df_price.dropna(subset=df_checker, how='all')\n",
     "\n",
     "\n",
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc5cb64f",
+   "id": "66d21239",
    "metadata": {},
    "source": [
     "### From the above plot between 2015 and 2016, there is reduction in the company's revenue. The company can out why there is decline through surveys and create targeted Ads that would draw more more customers to its services"
